--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ workspace/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-/package-lock.json
+**/package-lock.json
 /yarn.lock
 /.yarn
 /.yarnrc.yml
