--- a/web/package.json
+++ b/web/package.json
@@ -11,12 +11,13 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
+    "axios": "^1.13.5",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-icons": "^5.5.0",
     "react-select": "^5.10.2",
     "recharts": "^3.7.0",
-    "rsuite": "^6.1.1",
+    "rsuite": "^6.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
